src/Antlr4/DataPrivilegeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DataPrivilege.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class DataPrivilegeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, LINECOMMENT=8, 
		COMMENT=9, AND=10, OR=11, ASC=12, DESC=13, BETWEEN=14, EXISTS=15, IN=16, 
		IS=17, NULL=18, LIKE=19, NOT=20, WHERE=21, SELECT=22, FROM=23, ORDER=24, 
		BY=25, GETDATE=26, EQUAL=27, GREATER=28, LESS=29, EXCLAMATION=30, DOT=31, 
		ID=32, AS=33, STRING=34, DECIMAL=35, BINARY=36, FLOAT=37, REAL=38, S=39;
	public const int
		RULE_comparisonOperator = 0, RULE_expression = 1, RULE_expressionList = 2, 
		RULE_columnElem = 3, RULE_simpleSubquery = 4, RULE_tableName = 5, RULE_searchConditionAnd = 6, 
		RULE_searchConditionNot = 7, RULE_searchCondition = 8, RULE_customField = 9, 
		RULE_numericExpression = 10, RULE_stringExpression = 11, RULE_nullExpression = 12, 
		RULE_constantExpression = 13, RULE_getDateExpression = 14, RULE_existsExpression = 15, 
		RULE_comparisonExpression = 16, RULE_betweenAndExpression = 17, RULE_inExpression = 18, 
		RULE_likeExpression = 19, RULE_isNullExpression = 20, RULE_predicate = 21;
	public static readonly string[] ruleNames = {
		"comparisonOperator", "expression", "expressionList", "columnElem", "simpleSubquery", 
		"tableName", "searchConditionAnd", "searchConditionNot", "searchCondition", 
		"customField", "numericExpression", "stringExpression", "nullExpression", 
		"constantExpression", "getDateExpression", "existsExpression", "comparisonExpression", 
		"betweenAndExpression", "inExpression", "likeExpression", "isNullExpression", 
		"predicate"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'{'", "'}'", "'+'", "'-'", "'('", "')'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'='", "'>'", "'<'", "'!'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "LINECOMMENT", "COMMENT", 
		"AND", "OR", "ASC", "DESC", "BETWEEN", "EXISTS", "IN", "IS", "NULL", "LIKE", 
		"NOT", "WHERE", "SELECT", "FROM", "ORDER", "BY", "GETDATE", "EQUAL", "GREATER", 
		"LESS", "EXCLAMATION", "DOT", "ID", "AS", "STRING", "DECIMAL", "BINARY", 
		"FLOAT", "REAL", "S"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DataPrivilege.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DataPrivilegeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DataPrivilegeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DataPrivilegeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ComparisonOperatorContext : ParserRuleContext {
		public ITerminalNode EQUAL() { return GetToken(DataPrivilegeParser.EQUAL, 0); }
		public ITerminalNode GREATER() { return GetToken(DataPrivilegeParser.GREATER, 0); }
		public ITerminalNode LESS() { return GetToken(DataPrivilegeParser.LESS, 0); }
		public ITerminalNode EXCLAMATION() { return GetToken(DataPrivilegeParser.EXCLAMATION, 0); }
		public ComparisonOperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparisonOperator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisonOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComparisonOperatorContext comparisonOperator() {
		ComparisonOperatorContext _localctx = new ComparisonOperatorContext(Context, State);
		EnterRule(_localctx, 0, RULE_comparisonOperator);
		try {
			State = 59;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; Match(EQUAL);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; Match(GREATER);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 46; Match(LESS);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 47; Match(LESS);
				State = 48; Match(EQUAL);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 49; Match(GREATER);
				State = 50; Match(EQUAL);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 51; Match(LESS);
				State = 52; Match(GREATER);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 53; Match(EXCLAMATION);
				State = 54; Match(EQUAL);
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 55; Match(EXCLAMATION);
				State = 56; Match(GREATER);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 57; Match(EXCLAMATION);
				State = 58; Match(LESS);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ColumnElemContext columnElem() {
			return GetRuleContext<ColumnElemContext>(0);
		}
		public ConstantExpressionContext constantExpression() {
			return GetRuleContext<ConstantExpressionContext>(0);
		}
		public CustomFieldContext customField() {
			return GetRuleContext<CustomFieldContext>(0);
		}
		public GetDateExpressionContext getDateExpression() {
			return GetRuleContext<GetDateExpressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 2, RULE_expression);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61; columnElem();
				}
				break;
			case T__3:
			case T__4:
			case NULL:
			case STRING:
			case DECIMAL:
			case BINARY:
			case FLOAT:
			case REAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62; constantExpression();
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63; customField();
				}
				break;
			case GETDATE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 64; getDateExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionListContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ExpressionListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionList; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionListContext expressionList() {
		ExpressionListContext _localctx = new ExpressionListContext(Context, State);
		EnterRule(_localctx, 4, RULE_expressionList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; expression();
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 68; Match(T__0);
				State = 69; expression();
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnElemContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(DataPrivilegeParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(DataPrivilegeParser.ID, i);
		}
		public ITerminalNode DOT() { return GetToken(DataPrivilegeParser.DOT, 0); }
		public ColumnElemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columnElem; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumnElem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnElemContext columnElem() {
		ColumnElemContext _localctx = new ColumnElemContext(Context, State);
		EnterRule(_localctx, 6, RULE_columnElem);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 75; Match(ID);
				State = 76; Match(DOT);
				}
				break;
			}
			State = 79; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleSubqueryContext : ParserRuleContext {
		public SearchConditionContext where;
		public ITerminalNode SELECT() { return GetToken(DataPrivilegeParser.SELECT, 0); }
		public ColumnElemContext columnElem() {
			return GetRuleContext<ColumnElemContext>(0);
		}
		public ITerminalNode FROM() { return GetToken(DataPrivilegeParser.FROM, 0); }
		public TableNameContext tableName() {
			return GetRuleContext<TableNameContext>(0);
		}
		public ITerminalNode WHERE() { return GetToken(DataPrivilegeParser.WHERE, 0); }
		public SearchConditionContext searchCondition() {
			return GetRuleContext<SearchConditionContext>(0);
		}
		public SimpleSubqueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleSubquery; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleSubquery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleSubqueryContext simpleSubquery() {
		SimpleSubqueryContext _localctx = new SimpleSubqueryContext(Context, State);
		EnterRule(_localctx, 8, RULE_simpleSubquery);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(SELECT);
			State = 82; columnElem();
			State = 83; Match(FROM);
			State = 84; tableName();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 85; Match(WHERE);
				State = 86; _localctx.where = searchCondition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableNameContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(DataPrivilegeParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(DataPrivilegeParser.ID, i);
		}
		public ITerminalNode AS() { return GetToken(DataPrivilegeParser.AS, 0); }
		public TableNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableName; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableNameContext tableName() {
		TableNameContext _localctx = new TableNameContext(Context, State);
		EnterRule(_localctx, 10, RULE_tableName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; Match(ID);
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 90; Match(AS);
				}
			}

			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 93; Match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SearchConditionAndContext : ParserRuleContext {
		public SearchConditionNotContext[] searchConditionNot() {
			return GetRuleContexts<SearchConditionNotContext>();
		}
		public SearchConditionNotContext searchConditionNot(int i) {
			return GetRuleContext<SearchConditionNotContext>(i);
		}
		public ITerminalNode[] AND() { return GetTokens(DataPrivilegeParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(DataPrivilegeParser.AND, i);
		}
		public SearchConditionAndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_searchConditionAnd; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSearchConditionAnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SearchConditionAndContext searchConditionAnd() {
		SearchConditionAndContext _localctx = new SearchConditionAndContext(Context, State);
		EnterRule(_localctx, 12, RULE_searchConditionAnd);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; searchConditionNot();
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND) {
				{
				{
				State = 97; Match(AND);
				State = 98; searchConditionNot();
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SearchConditionNotContext : ParserRuleContext {
		public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public ITerminalNode NOT() { return GetToken(DataPrivilegeParser.NOT, 0); }
		public SearchConditionNotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_searchConditionNot; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSearchConditionNot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SearchConditionNotContext searchConditionNot() {
		SearchConditionNotContext _localctx = new SearchConditionNotContext(Context, State);
		EnterRule(_localctx, 14, RULE_searchConditionNot);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 104; Match(NOT);
				}
				break;
			}
			State = 107; predicate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SearchConditionContext : ParserRuleContext {
		public SearchConditionAndContext[] searchConditionAnd() {
			return GetRuleContexts<SearchConditionAndContext>();
		}
		public SearchConditionAndContext searchConditionAnd(int i) {
			return GetRuleContext<SearchConditionAndContext>(i);
		}
		public ITerminalNode[] OR() { return GetTokens(DataPrivilegeParser.OR); }
		public ITerminalNode OR(int i) {
			return GetToken(DataPrivilegeParser.OR, i);
		}
		public SearchConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_searchCondition; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSearchCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SearchConditionContext searchCondition() {
		SearchConditionContext _localctx = new SearchConditionContext(Context, State);
		EnterRule(_localctx, 16, RULE_searchCondition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; searchConditionAnd();
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OR) {
				{
				{
				State = 110; Match(OR);
				State = 111; searchConditionAnd();
				}
				}
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CustomFieldContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(DataPrivilegeParser.ID, 0); }
		public CustomFieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_customField; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCustomField(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CustomFieldContext customField() {
		CustomFieldContext _localctx = new CustomFieldContext(Context, State);
		EnterRule(_localctx, 18, RULE_customField);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(T__1);
			State = 118; Match(ID);
			State = 119; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumericExpressionContext : ParserRuleContext {
		public ITerminalNode DECIMAL() { return GetToken(DataPrivilegeParser.DECIMAL, 0); }
		public ITerminalNode BINARY() { return GetToken(DataPrivilegeParser.BINARY, 0); }
		public ITerminalNode REAL() { return GetToken(DataPrivilegeParser.REAL, 0); }
		public ITerminalNode FLOAT() { return GetToken(DataPrivilegeParser.FLOAT, 0); }
		public NumericExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numericExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumericExpressionContext numericExpression() {
		NumericExpressionContext _localctx = new NumericExpressionContext(Context, State);
		EnterRule(_localctx, 20, RULE_numericExpression);
		int _la;
		try {
			State = 130;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__3 || _la==T__4) {
					{
					State = 121;
					_la = TokenStream.LA(1);
					if ( !(_la==T__3 || _la==T__4) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 124; Match(DECIMAL);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125; Match(BINARY);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__3 || _la==T__4) {
					{
					State = 126;
					_la = TokenStream.LA(1);
					if ( !(_la==T__3 || _la==T__4) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 129;
				_la = TokenStream.LA(1);
				if ( !(_la==FLOAT || _la==REAL) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringExpressionContext : ParserRuleContext {
		public ITerminalNode STRING() { return GetToken(DataPrivilegeParser.STRING, 0); }
		public StringExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stringExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringExpressionContext stringExpression() {
		StringExpressionContext _localctx = new StringExpressionContext(Context, State);
		EnterRule(_localctx, 22, RULE_stringExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132; Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NullExpressionContext : ParserRuleContext {
		public ITerminalNode NULL() { return GetToken(DataPrivilegeParser.NULL, 0); }
		public NullExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nullExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNullExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NullExpressionContext nullExpression() {
		NullExpressionContext _localctx = new NullExpressionContext(Context, State);
		EnterRule(_localctx, 24, RULE_nullExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; Match(NULL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantExpressionContext : ParserRuleContext {
		public StringExpressionContext stringExpression() {
			return GetRuleContext<StringExpressionContext>(0);
		}
		public NumericExpressionContext numericExpression() {
			return GetRuleContext<NumericExpressionContext>(0);
		}
		public NullExpressionContext nullExpression() {
			return GetRuleContext<NullExpressionContext>(0);
		}
		public ConstantExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constantExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDataPrivilegeVisitor<TResult> typedVisitor = visitor as IDataPrivilegeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantExpressionContext constantExpression() {
		ConstantExpressionContext _localctx = new ConstantExpressionContext(Context, State);
		EnterRule(_localctx, 26, RULE_constantExpression);
		try {
			State = 139;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 136; stringExpression();
				}
				break;
			case T__3:
			case T__4:
			case DECIMAL:
			case BINARY:
			case FLOAT:
			case REAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 137; numericExpression();
				}
				break;
			case NULL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 138; nullExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
